# olamed-modules-src

./: README.md  client.c  server.c
HealthMods/: CMakeLists.txt
HealthMods/BalanceMod/: .clang-format  CMakeLists.txt  balanceprotocol.cpp  balanceprotocol.h  balancesensor.cpp  balancesensor.h  dapplication.cpp  dapplication.h  socket.cpp
HealthMods/CommonBase/: CMakeLists.txt  healthsensors.cpp  healthsensors.h
HealthMods/SensorsMod/: CMakeLists.txt  dapplication.cpp  dapplication.h  main.cpp  sensorprotocol.cpp
HealthMods/SensorsMod/AurigaHL7/: hl7basedecode.h
HealthMods/SensorsMod/AurigaHL7/common/: dataencode.cpp  hl7socket.h
HealthMods/SensorsMod/AurigaHL7/doc/: ack-hl7.txt  frame.txt
HealthMods/SensorsMod/Sensor/: CMakeLists.txt
HealthMods/SensorsMod/Sensor/TOTH/: tothmonitor.cpp  tothmonitor.h
PrinterMod/: CMakeLists.txt  dapplication.cpp  dapplication.h  main.cpp  netsnmp.cpp  netsnmp.h  printerdevice.cpp  printerdevice.h  printerdiscovery.cpp  printerdiscovery.h  printerprotocol.cpp  printerprotocol.h  socket.cpp  socket.h  supplyprinter.cpp  supplyprinter.h
PrinterMod/cmake/Modules/: FindCUPS.cmake  FindNetSNMP.cmake
PrinterMod/deb/printermod/: make.sh
PrinterMod/deb/printermod/debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  printermod.substvars  rules
PrinterMod/deb/printermod/debian/.debhelper/printermod/: dbgsym-build-ids
PrinterMod/deb/printermod/debian/.debhelper/printermod/dbgsym-root/DEBIAN/: control  md5sums
PrinterMod/deb/printermod/debian/.debhelper/printermod/dbgsym-root/usr/share/doc/: printermod-dbgsym
PrinterMod/deb/printermod/debian/printermod/DEBIAN/: conffiles  control  md5sums  preinst  shlibs
PrinterMod/deb/printermod/debian/printermod/usr/local/lib/: libnetsnmp.la  libnetsnmpagent.la  libnetsnmphelpers.la  libnetsnmptrapd.la
PrinterMod/deb/printermod/debian/printermod/usr/local/sbin/: snmpd  snmptrapd
PrinterMod/deb/printermod/debian/source/: include-binaries
PrinterMod/deb/printermod/src/: PrinterMod  printer-mod.service
PrinterMod/deb/printermod/src/snmp/lib/: libnetsnmpmibs.la
PrinterMod/deb/printermod/src/snmp/sbin/: snmpd  snmptrapd
PrinterMod/scripts/: printer-mod.service  printer-mod.sh
SensorsMod/: CMakeLists.txt  dapplication.cpp  dapplication.h  healthsensors.cpp  healthsensors.h  healtsensors.cpp  healtsensors.h  main.cpp  sensorprotocol.cpp  sensorprotocol.h  socket.cpp
SensorsMod/AurigaHL7/: CMakeLists.txt  hl7basedecode.cpp  hl7basedecode.h
SensorsMod/AurigaHL7/2.4/segment/: MSH.h  OBX.h
SensorsMod/AurigaHL7/common/: hl7mllp.h  hl7socket.h
SensorsMod/Sensor/TOTH/: tothmonitor.cpp  tothmonitor.h
SensorsMod/SpO2Mod/: CMakeLists.txt
SensorsMod/SpO2Mod/TOTH/: tothspo2.cpp  tothspo2.h
SysMonitorMod/: CMakeLists.txt  dapplication.cpp  dapplication.h  machineinfo.cpp  machineinfo.h  machineprotocol.cpp  machineprotocol.h  main.cpp  socket.cpp
SysMonitorMod/cmake/: Utils.cmake
SysMonitorMod/cmake/Modules/: FindSensors.cmake
SysMonitorMod/scripts/: check_graceful.service  sys-monitor-mod.service  sys-monitor-mod.sh
